--- a/overlaps_strand_bias_to_upload.Rmd
+++ b/overlaps_strand_bias_to_upload.Rmd
@@ -20,13 +20,13 @@ library(data.table)
 
 ```{r }
 #read in all peaks
-all <- read.delim("/Users/kathryn/Reprocess_all_paper_datasets/Supp_tables/TableS3_final.txt", sep = "\t", header = TRUE)
+all <- read.delim("/Users/kathryn/Reprocess_all_paper_datasets/Supp_tables/TableS3_final_rn3.txt", sep = "\t", header = TRUE)
 
 allGR <- makeGRangesFromDataFrame(all,
                                      keep.extra.columns = TRUE,
                                      ignore.strand=FALSE,
                                      seqinfo=NULL,
-                                     seqnames.field="seqnames",
+                                     seqnames.field="chromosome",
                                      start.field="start",
                                      end.field="end",
                                      strand.field="strand",
@@ -38,15 +38,15 @@ neg_all <- allGR[allGR@strand=="-"]
 
 overlapping <- mergeByOverlaps(pos_all, neg_all, minoverlap=10L, ignore.strand = TRUE)
 overlapping_r <- c(overlapping@listData$pos_all,overlapping@listData$neg_all)   
-overlapping_rf <- reduce(overlapping_r, ignore.strand=TRUE) #just giving region with overlap
+overlapping_rf <- GenomicRanges::reduce(overlapping_r, ignore.strand=TRUE) #just giving region with overlap
 nonoverlapping <- allGR[allGR %outside% overlapping_rf]
 
-#read in all mapped reads, concatenated by antibody/lysate; files are too big to put on Github, available upon request
-Dir <- "/Users/kathryn/Reprocess_all_paper_datasets/AaegL5_mapped"
+#read in all mapped reads, concatenated by antibody/lysate; data are too large to upload to gtihub; available upon request or raw unprocessed reads can be obtained at GEO: ###
+Dir <- "/Users/kathryn/Reprocess_all_paper_datasets/AaegL5_mapped/cat_beds"
 all_reads <- dir(Dir, pattern="*.bed$",full.names = TRUE)
 all_reads <- grep("cat", all_reads, value = TRUE)
 all_reads_gr <- lapply(all_reads, import, format="BED")
-names(all_reads_gr) <- gsub("/Users/kathryn/Reprocess_all_paper_datasets/AaegL5_mapped/", "", all_reads)
+names(all_reads_gr) <- gsub("/Users/kathryn/Reprocess_all_paper_datasets/AaegL5_mapped/cat_beds/", "", all_reads)
 
 #get reads at overlapping peaks
 lreads_over_overpeaks <- lapply(all_reads_gr, function(x) mergeByOverlaps(x, overlapping_rf, ignore.strand=TRUE))
@@ -75,56 +75,19 @@ lread_unpair$pos_over_neg_legnth  <- ifelse(lread_unpair$x.strand=="+", as.numer
 
 
 lread_bind <- rbind(lread_unpair, lread_coll)
+lread_bind  <- as.data.frame(lread_bind)
+
+#write.table(lread_bind, "/Users/kathryn/Reprocess_all_paper_datasets/Rmds_to_upload/To_upload/overlapping_read_counts.txt", col.names = TRUE,row.names = FALSE, quote  = FALSE, sep  = "\t")
 
 ```
 
 ##Get strand bias ratio for disjoint peaks
 
 ```{r}
-lreads_nonover <- lapply(all_reads_gr, function(x) mergeByOverlaps(x, nonoverlapping, ignore.strand=TRUE))
+#User can start here with data table provided in my github
+lread_bind <-read.delim("/Users/kathryn/Reprocess_all_paper_datasets/Rmds_to_upload/To_upload/overlapping_read_counts.txt",  header = TRUE, stringsAsFactors = FALSE, sep= "\t")
 
-lreads_nonoverdf <- lapply(lreads_nonover, function(x) bind_cols(as.data.frame(x$x), as.data.frame(x$peakID)))
-
-lreads_nonoverdf <- rbindlist(lreads_nonoverdf, idcol = TRUE)
-col.names <- colnames(lreads_nonoverdf)
-col.names <- gsub(".id", "sample", col.names)
-col.names <- col.names[1:8]
-col.names <- c(col.names, "peakID")
-lreads_nonoverdf <- setNames(lreads_nonoverdf, col.names)
-
-lreads_nonoverdf$dups <- paste0(lreads_nonoverdf$sample, "_", lreads_nonoverdf$name, "_", lreads_nonoverdf$peakID)
-lreads_nonoverdf$duplicated <- duplicated(lreads_nonoverdf)
-length(which(lreads_nonoverdf$duplicated==TRUE)) #1, remove
-lreads_nonoverdf <- subset(lreads_nonoverdf, lreads_nonoverdf$duplicated==FALSE)
-
-lreads_nonoverdf  %>% group_by(.dots=c("sample","strand")) %>% summarize(count = n(),total_length = sum(sampleth))
-
-lreads_nonover_bypeak <- lreads_nonoverdf %>% group_by(.dots=c("sample","strand", "peakID")) %>% summarize(read_count = n(),total_length = sum(sampleth))
-
-
-#if are overlapping reads, calculate count and length bias ratios
-lread_non <- lreads_nonover_bypeak %>% group_by(.dots=c("sample","peakID")) %>% filter(n()==2) %>% group_by(.dots=c("sample","peakID")) %>% mutate(pos_over_neg_count = ((subset(read_count, strand=="+"))/(subset(read_count, strand=="-"))), pos_over_neg_legnth = ((subset(total_length, strand=="+"))/(subset(total_length, strand=="-"))))
-
-lread_non_coll <- distinct(lread_non, peakID, .keep_all = TRUE) #remove duplicate entries because have one positive and one negative read entry for each peak with the same count and length ratios
-
-#now peaks with reads on only one strand
-lread_non_unpair <- lreads_nonover_bypeak %>% group_by(.dots=c("sample","peakID")) %>% filter(n()==1) %>% group_by(.dots=c("sample","peakID"))   
-lread_non_unpair$pos_over_neg_count  <- ifelse(lread_non_unpair$strand=="+", as.numeric(paste0(lread_non_unpair$read_count)), as.numeric(1/lread_non_unpair$read_count))
-lread_non_unpair$pos_over_neg_legnth  <- ifelse(lread_non_unpair$strand=="+", as.numeric(paste0(lread_non_unpair$total_length)), as.numeric(1/lread_non_unpair$total_length))
-
-lread_non_bind <- rbind(lread_non_unpair, lread_non_coll)
-
-lread_bind$sample <- paste0(lread_bind$sample, "_", "overlaps")
-lread_non_bind$sample <- paste0(lread_non_bind$sample, "_", "disjoint")
-col.names <- colnames(lread_non_bind)
-col.names <- gsub("peakID", "ID", col.names)
-lread_non_bind <- setNames(lread_non_bind, col.names)
-lread_bind <- setNames(lread_bind, col.names)
-lread_bind  <- as.data.frame(lread_bind )
-lread_non_bind  <- as.data.frame(lread_non_bind )
-lread <- rbind(lread_bind, lread_non_bind)
-
-lread_noIgG <- lread[!grepl("IgG", lread$sample),]
+lread_noIgG <- lread_bind[!grepl("IgG", lread_bind$sample),]
 
 lread_noIgG$log10count <- log10(lread_noIgG$pos_over_neg_count)
 lread_noIgG$log10count_nosense <- ifelse(lread_noIgG$log10count < 0, lread_noIgG$log10count * -1, lread_noIgG$log10count * 1)
@@ -140,16 +103,12 @@ lread_aegypti <- lread_noIgG[grepl("aegypti", lread_noIgG$sample),]
 
 ```{r}
 vert <- c(0,2)
-ggplot(lread_Aag2, aes(log10length_nosense, colour = sample, linetype = sample, alpha= sample)) + stat_ecdf() + scale_colour_manual(values=c("#1B0B80","#1B0B80", "#8A0F09", "#8A0F09")) + theme_bw() + scale_linetype_manual(values=c("solid",  "solid", "solid", "solid")) + 
-  scale_alpha_manual(values = c(0.4, 1,0.4, 1)) + geom_vline(xintercept =vert, linetype="dashed") + xlim(0, 6)
+ggplot(lread_Aag2, aes(log10length_nosense, colour = sample)) + stat_ecdf() + scale_colour_manual(values=c("#1B0B80", "#8A0F09")) + theme_bw() + geom_vline(xintercept =vert, linetype="dashed") + xlim(0, 6)
 
-ggplot(lread_aegypti, aes(log10length_nosense, colour = sample, linetype = sample, alpha= sample)) + stat_ecdf() + scale_colour_manual(values=c("#3360A9","#3360A9", "#FA0F0C", "#FA0F0C")) + theme_bw() + scale_linetype_manual(values=c("solid",  "solid", "solid", "solid")) + 
-  scale_alpha_manual(values = c(0.4, 1,0.4, 1)) + geom_vline(xintercept =vert, linetype="dashed") + xlim(0, 7)
+ggplot(lread_aegypti, aes(log10length_nosense, colour = sample)) + stat_ecdf() + scale_colour_manual(values=c("#3360A9", "#FA0F0C")) + theme_bw() + geom_vline(xintercept =vert, linetype="dashed") + xlim(0, 7)
 
-ks.test(subset(lread_Aag2$log10length_nosense, lread_Aag2$sample=="cat_Aag2Ago1.bed_overlaps"), subset(lread_Aag2$log10length_nosense, lread_Aag2$sample=="cat_Aag2Ago2.bed_overlaps"),alternative = c("less"))
+ks.test(subset(lread_Aag2$log10length_nosense, lread_Aag2$sample=="cat_Aag2Ago1.bed"), subset(lread_Aag2$log10length_nosense, lread_Aag2$sample=="cat_Aag2Ago2.bed"),alternative = c("less"))
 
-ks.test(subset(lread_aegypti$log10length_nosense, lread_aegypti$sample=="cat_aegyptiAgo1.bed_overlaps"), subset(lread_aegypti$log10length_nosense, lread_aegypti$sample=="cat_aegyptiAgo2.bed_overlaps"),alternative = c("less"))
+ks.test(subset(lread_aegypti$log10length_nosense, lread_aegypti$sample=="cat_aegyptiAgo1.bed"), subset(lread_aegypti$log10length_nosense, lread_aegypti$sample=="cat_aegyptiAgo2.bed"),alternative = c("less"))
 
 ```
-
-
