--- a/mirdeep2_processing_filtering_to_upload.Rmd
+++ b/mirdeep2_processing_filtering_to_upload.Rmd
@@ -873,7 +873,7 @@ ggplot(aes(x=log2Aag2Ago1_counts_norm,y=log2Aag2Ago2_counts_norm), data=sRNA_Aag
 
 ggplot(aes(x=log2aegyptiAgo1_counts_norm,y=log2aegyptiAgo2_counts_norm), data=sRNA_all_filtered) + 
   geom_point(aes(colour=log2FCaegyptiAgo1overAgo2, shape = Aag2_type), size=3, stroke=1) + scale_shape_manual(values = c(19,1,5)) +
-  scale_colour_gradient2(high="#1B0B80", mid ="gray", low="#8A0F09") +
+  scale_colour_gradient2(high="#3360A9", mid ="gray", low="#FA0F0C") +
   theme_bw() + xlim(-3,15) + ylim(-3,15) +
   coord_equal() +
   geom_abline(intercept = 0, slope = 1, linetype="dashed") + geom_text_repel(data = sRNA_all_filtered[grepl("miR-932", sRNA_all_filtered$miRNA),], aes(label = miRNA), size=2, force=10, nudge_x = 5)
